<resources>
    <string name="app_name">My Application</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="already_registered_sign_in">Already Registered , Sign In !</string>
    <string name="sign_up">Sign Up</string>
    <string name="retype_your_password">Retype Your Password</string>
    <string name="owner_s_name">Owner\'s Name</string>
    <string name="electricity_bill_calculator">Electricity Bill Calculator</string>
    <string name="enter_the_units">Enter the Units</string>
    <string name="enter_starting_date">Enter Starting Date</string>
    <string name="enter_ending_date">Enter Ending Date</string>
    <string name="calculate">Calculate</string>
    <string name="total_bill">Total Bill</string>
    <string name="rs_0000_00">Rs. 0000.00</string>
    <string name="water_bill_calculator">Water Bill Calculator</string>
    <string name="result_text">Units: %d\nPrice: $%.2f</string>
    <string name="user_profile">User Profile</string>
    <string name="bill_calculator">Bill Calculator</string>
    <string name="fuel_pass">Fuel Pass</string>
    <string name="delete">delete</string>
    <string name="add">add</string>
    <string name="edit">Edit</string>
    <string name="_75_44_nugagaha_road_kottama">75/44, nugagaha road, Kottama</string>
    <string name="address">Address</string>
    <string name="b76286732">B76286732</string>
    <string name="licnece_no">Licnece No</string>
    <string name="_200121602055">200121602055</string>
    <string name="nic_no">NIC No</string>
    <string name="cbj_2323">CBJ - 2323</string>
    <string name="vehical_reg_no">Vehical Reg No</string>
    <string name="ravindu_alwis">Ravindu Alwis</string>
    <string name="fuel_pass2">Fuel Pass</string>
    <string name="enter_the_owner_name">Enter the Owner Name</string>
    <string name="add_new_fuel_pass">Add New Fuel Pass</string>
    <string name="enter_the_vehical_no">Enter the Vehical No</string>
    <string name="enter_nic_no">Enter NIC No</string>
    <string name="enter_the_licence_no">Enter the Licence No</string>
    <string name="enter_the_address">Enter the Address</string>
    <string name="add_pass">Add Pass</string>

</resources>